--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
   <body>
     <h1>Hello Github ! </h1>
+    <h2>Bonjour Github !</h2>
+    <h3>Hallo Github !</h3>
   </body>
 </head>
 </html>
